# CV-Copilot

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/api/: deps.py  main.py
backend/app/api/routes/: applications.py  cv.py  jobs.py
backend/app/db/: crud.py  session.py
backend/app/embeddings/: cv_embeddings.py  job_embeddings.py
backend/app/loaders/: cv_loader.py  job_loader.py
backend/app/rag/: cv_rag.py  job_rag.py
backend/app/schemas/: application.py  cv.py  job.py
backend/db/: schema.sql
frontend/: Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cv/: page.tsx
frontend/app/jobs/match/: page.tsx
frontend/components/: Navbar.tsx  RateLimitModal.tsx
frontend/lib/: api.ts
