[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.16.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "supabase>=2.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
